# plugin-template

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: lib.rs  ui.rs
src/ui/: window_handle.rs
