[package]
name = "emilydotgg-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fpsdk = { git = "https://github.com/emily33901/fpsdk" }
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
bincode = "1.3"
log = "0.4"
parking_lot = "0.12"
eyre = "0.6.8"
iced = { path = "iced", features=["tokio", "image", "canvas"]  }
iced_native = { path = "iced/native" }
iced_futures = { path = "iced/futures" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
derive_more = "0.99.17"

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
]


[patch.crates-io]
iced = { path = "iced" }
iced_native = { path = "iced/native" }
iced_core = { path = "iced/core" }
iced_style = { path = "iced/style" }
iced_graphics = { path = "iced/graphics" }
